--- a/note3/controllers/basic_control/.vscode/settings.json
+++ b/note3/controllers/basic_control/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "initialize.h": "c",
-        "sensor.h": "c"
+        "sensor.h": "c",
+        "control.h": "c"
     }
 }
