--- a/note3/controllers/basic_control/.vscode/settings.json
+++ b/note3/controllers/basic_control/.vscode/settings.json
@@ -3,6 +3,7 @@
         "initialize.h": "c",
         "sensor.h": "c",
         "control.h": "c",
-        "typeinfo": "c"
+        "typeinfo": "c",
+        "cmath": "c"
     }
 }
